test/Error/Patterns/Merge/Main.ds

-- Check error reporting for problems encountered when merging bindings.

-- bindings have differing airities.
fun3 True False	= 5
fun3 False	= 6
